--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="four wide column">
         <img
           id="poster"
-          src="assets/placeholderImage.png"
+          src=""
           alt="[MOVIE TITLE]"
         />
       </div>
@@ -40,11 +40,11 @@
         <div class="four wide column">
           <div class="ui cards" id="showing">
             <div class="card">
-              <div id="title" class="title"></div>
+              <div id="title" class="title">[MOVIE TITLE]</div>
               <div id="runtime" class="meta">[RUNTIME] minutes</div>
               <div class="content">
                 <div class="description">
-                  <div id="film-info"></div>
+                  <div id="film-info">[INSERT MOVIE DESCRIPTION HERE]</div>
                   <span id="showtime" class="ui label">[SHOWTIME]</span>
                   <span id="ticket-number">[--]</span> remaining tickets
                 </div>
